--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "prerender-spa-plugin": "^3.4.0",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1"
   },
   "browserslist": [
     "> 1%",
