--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "html-webpack-plugin": "^4.3.0",
     "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.5.11",
-    "vue-router": "^3.3.4",
+    "vue-router": "^3.4.2",
     "vuex": "^3.5.1"
   },
   "browserslist": [
